content/docs/0.8.x/reference/cli/commands/keptn_get_event_approval.triggered.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn get event approval.triggered"
slug: keptn_get_event_approval.triggered
---
## keptn get event approval.triggered

Returns the latest Keptn sh.keptn.event.approval.triggered event from a specific project/stage/service

### Synopsis

Returns the latest Keptn sh.keptn.event.approval.triggered event from a specific project/stage/service.

```
keptn get event approval.triggered [flags]
```

### Examples

```
keptn get event approval.triggered --project=sockshop --stage=staging --service=carts
```

### Options

```
  -h, --help             help for approval.triggered
  -p, --project string   The name of a project from which to retrieve an approval.triggered event
      --service string   The name of a service within a project from which to retrieve an approval.triggered event
  -s, --stage string     The name of a stage within a project from which to retrieve an approval.triggered event
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn get event](../keptn_get_event/)	 - Returns the latest Keptn event specified by event type

###### Auto generated by spf13/cobra on 19-Nov-2020
