content/docs/0.12.x/reference/cli/commands/keptn_get_event_approval.triggered.md
---
date: "2022-01-31T09:42:04Z"
title: "keptn get event approval.triggered"
slug: keptn_get_event_approval.triggered
---
## keptn get event approval.triggered

Returns the latest Keptn sh.keptn.event.approval.triggered event from a specific project/stage/service

### Synopsis

Returns the latest Keptn sh.keptn.event.approval.triggered event from a specific project/stage/service.

```
keptn get event approval.triggered [flags]
```

### Examples

```
keptn get event approval.triggered --project=sockshop --stage=staging --service=carts
```

### Options

```
  -p, --project string   The name of a project from which to retrieve an approval.triggered event
      --service string   The name of a service within a project from which to retrieve an approval.triggered event
  -s, --stage string     The name of a stage within a project from which to retrieve an approval.triggered event
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn get event](../keptn_get_event/)	 - Returns the latest Keptn event specified by event type

###### Auto generated by spf13/cobra on 31-Jan-2022
